Add the explanation for 'Criticality' and 'Information Acquisition Power'

--- a/sample-sigconf.tex
+++ b/sample-sigconf.tex
@@ -152,7 +152,7 @@ We examine the distribution based on risk and value of each attributes to better
 Freeman \cite{Freeman78centralityin} developed a set of measures for centrality based on betweenness. Later on, he proposed four core criteria, which developed into degree, closeness, betweenness, and eigenvector centrality  \cite{Freeman79centralityin}. We further leverage the concept of closeness and betweenness centrality to investigate Ecosystem graph.
 
 \textbf{Closeness Centrality}
- It emphasize how close a vertex is to all other vertices in the topology -- the distance of a vertex to all others in the network by focusing on the geodesic measurement from each vertex to all others (Freeman \cite{Freeman79centralityin}). To be more specific, it calculates the shortest path between all nodes and assigns each node a score based on the length of its shortest paths to other nodes. According to Yin et al. \cite{Yin2006}, closeness is an evaluation for ``how long it will take information to spread from a given vertex to others in the network'' (p.1603), which helps find the PII attributes that are best placed to reach others once breached, and thus influence the entire network most efficiently. Also according to Freidkin \cite{Freidkin}, closeness centrality represents the independence in the sense that PII attributes with higher closeness centrality do not need to seek information from other more peripheral actors.
+ It emphasize how close a vertex is to all other vertices in the topology -- the distance of a vertex to all others in the network by focusing on the geodesic measurement from each vertex to all others (Freeman \cite{Freeman79centralityin}). To be more specific, it calculates the shortest path between all nodes and assigns each node a score based on the length of its shortest paths to other nodes. According to Yin et al. \cite{Yin2006}, closeness is an evaluation for ``how long it will take information to spread from a given vertex to others in the network'' (p.1603), which helps find the PII attributes that are best placed to reach others once breached, and thus influence the entire network most efficiently. Also according to Freidkin \cite{Freidkin}, closeness centrality represents the independence in the sense that PII attributes with higher closeness centrality do not need to seek information from other more peripheral PII attributes. In our Ecosystem context, we define it as the `Information Acquisition Power' to present the ability the quickly access connected others.
 This yields the equation as follows. $C_{c}(v_{i})$ stands for the closeness centrality for vertex $i$ and $shortest(v_{i},v_{j})$ is the shortest path between two vertices:
 \begin{equation}
 C_{c}(v_{i}) = \sum_{j = 1}^{n} \frac{1}{shortest(v_{i}, v_{j})}
@@ -190,12 +190,12 @@ C_{B}(u) = \sum_{i \neq j \neq u}^{} \frac{\alpha (i, u, j) }{\alpha (i, j)}
   \label{fig:scatterplot_lblc}
 \end{figure}
 
-Betweenness centrality recognizes nodes that act as `bridges` among whole and assesses the PII attributes that determine the flow around the system. Betweenness serves as a powerful characteristic for communication dynamics -- a high betweenness index could imply a node regulates collaboration in-between, holds authority over,  or infers periphery of diverse clusters.
+Betweenness centrality recognizes nodes that act as `bridges` among whole and assesses the PII attributes that determine the flow around the system. Betweenness serves as a powerful characteristic for communication dynamics -- a high betweenness index could imply a node regulates collaboration in-between, holds authority over,  or infers periphery of diverse clusters. In our Ecosystem context, we define it as the `Criticality' to present the ability to control over network flow.
 
 
 
 
-Following the centrality concept mentioned above, we calculate and introduce the scatter plot of x-axis revealing betweenness and y-axis showing closeness indexes.  This plot could further be divided into four quadrants based on the combination of high and low values on x and y axes. Denoting betweenness for authority (A) and closeness for broadcaster (B), Figure~\ref{fig:scatterplot_hbhc} shows the graph with blue dots representing high A and high B, Figure~\ref{fig:scatterplot_lbhc} with green dots low A and High B, Figure~\ref{fig:scatterplot_hblc} with red dots High A and low B, and lastly Figure~\ref{fig:scatterplot_lblc} with orange dots low A and low B. We can infer from these plots that most of the data points aggregate on the third quadrant, which maintains a low closeness and low betweenness centrality values (Figure~\ref{fig:scatterplot_lblc}). There exist Only few sparse distribution of points with both high betweenness and closeness centrality (Figure~\ref{fig:scatterplot_hbhc}). Such PII attributes hold high authority and act as broadcasters in the network of PII attributes. If evaluated using the Ecosystem model, these PII attributes could be asserted as attributes that will rapidly jeopardize the remaining sub-network if already exposed, and boost the information flow of exposure inside the system.
+Following the centrality concept mentioned above, we calculate and introduce the scatter plot of x-axis revealing betweenness and y-axis showing closeness indexes.  This plot could further be divided into four quadrants based on the combination of high and low values on x and y axes. Denoting betweenness for `Criticality' (C) and closeness for `Information Acquisition Power' (I), Figure~\ref{fig:scatterplot_hbhc} shows the graph with blue dots representing high C and high I, Figure~\ref{fig:scatterplot_lbhc} with green dots low C and High I, Figure~\ref{fig:scatterplot_hblc} with red dots High C and low I, and lastly Figure~\ref{fig:scatterplot_lblc} with orange dots low C and low I. We can infer from these plots that most of the data points aggregate on the third quadrant, which maintains a low closeness and low betweenness centrality values (Figure~\ref{fig:scatterplot_lblc}). There exist Only few sparse distribution of points with both high betweenness and closeness centrality (Figure~\ref{fig:scatterplot_hbhc}). Such PII attributes hold high authority and act as broadcasters in the network of PII attributes. If evaluated using the Ecosystem model, these PII attributes could be asserted as attributes that will rapidly jeopardize the remaining sub-network if already exposed, and boost the information flow of exposure inside the system.
 
 
 Figure~\ref{fig:top10_closeness_betweenness_centrality} displays the top 10 PII in descending order based on the value of closeness and betweenness centrality. The top three attributes with the highest value of closeness, i.e., most efficient and least costly to spread information from and to, are \textit{Customer Database}, \textit{Password}, and \textit{Email Address}. Also, the top three attributes with the highest value of betweenness centrality, i.e., most authoritative for controlling the information flow, are \textit{Email Address}, \textit{Name}, and \textit{Address}. 
