Before making it double-blinded.

--- a/sample-sigconf.tex
+++ b/sample-sigconf.tex
@@ -19,21 +19,37 @@
 \title{Statistical  Analysis  for  Identity  Risk,  Exposure  and  Cost  Using  the Ecosystem  of  Identity  Attributes
 }
 
-\author{\IEEEauthorblockN{1\textsuperscript{st} Chia-Ju Chen}
-\IEEEauthorblockA{\textit{Center for Identity} \\
-\textit{University of Texas at Austin}\\
-ju40268@utexas.edu}
-\and
-\IEEEauthorblockN{2\textsuperscript{nd} Razieh Nokhbeh Zaeem}
-\IEEEauthorblockA{\textit{Center for Identity} \\
-\textit{University of Texas at Austin}\\
-razieh@identity.utexas.edu}
-\and
-\IEEEauthorblockN{3\textsuperscript{rd} K. Suzanne Barber}
-\IEEEauthorblockA{\textit{Center for Identity} \\
-\textit{University of Texas at Austin}\\
-sbarber@identity.utexas.edu}
-}
+% \author{\IEEEauthorblockN{1\textsuperscript{st} Chia-Ju Chen}
+% \IEEEauthorblockA{\textit{Center for Identity} \\
+% \textit{University of Texas at Austin}\\
+% ju40268@utexas.edu}
+% \and
+% \IEEEauthorblockN{2\textsuperscript{nd} Razieh Nokhbeh Zaeem}
+% \IEEEauthorblockA{\textit{Center for Identity} \\
+% \textit{University of Texas at Austin}\\
+% razieh@identity.utexas.edu}
+% \and
+% \IEEEauthorblockN{3\textsuperscript{rd} K. Suzanne Barber}
+% \IEEEauthorblockA{\textit{Center for Identity} \\
+% \textit{University of Texas at Austin}\\
+% sbarber@identity.utexas.edu}
+% }
+
+% \author{\IEEEauthorblockN{1\textsuperscript{st} ---}
+% \IEEEauthorblockA{\textit{---} \\
+% \textit{---}\\
+% ---}
+% \and
+% \IEEEauthorblockN{2\textsuperscript{nd} ---}
+% \IEEEauthorblockA{\textit{---} \\
+% \textit{---}\\
+% ---}
+% \and
+% \IEEEauthorblockN{3\textsuperscript{rd} ---}
+% \IEEEauthorblockA{\textit{---} \\
+% \textit{---}\\
+% ---}
+% }
 \maketitle
 
 \begin{abstract}
@@ -52,8 +68,7 @@ In 2017, the number of identity fraud victims increased by 8\% rising to 16.7 mi
 
 In order to model the identity ecosystem, the initiative approach is to analyze the components from both cyber and physical aspects. Modern society introduces seamlessly merge of cyber world for both online and offline attributes. Examples of on-line attributes are one's social media accounts, on-line shopping patterns, passwords, and email accounts. Off-line attributes are those related to the physical world such as bank accounts, credit and debit cards, Social Security Number, and one's physical characteristics.
 
-Our previous work, the UT CID Identity Ecosystem developed at the Center for Identity (CID) at the University of Texas (UT) at Austin constructed a graph-based model of people, devices,
-and organizations \cite{EcosystemModeling}. It models the relation as a Bayesian Network, performs interference for possible sources of breaches and cost if the source is compromised.
+ The UT CID Identity Ecosystem developed at the Center for Identity (CID) at the University of Texas (UT) at Austin constructed a graph-based model of people, devices, and organizations \cite{EcosystemModeling}. It models the relation as a Bayesian Network, performs interference for possible sources of breaches and cost if the source is compromised.
 It provides a framework for understanding the value, risk and mutual relationships for pairs of PII attributes. Each vertex represents an attribute whereas edges in-between implies the relationship.
 
 For data source of ecosystem, The Identity Threat Assessment and Prediction (ITAP) \cite{ITAPDataSource} project is leveraged. ITAP is our endeavor focused on gathering identity theft information from news stories, structuring this information, analyzing it, and discovering trends and characteristics.
