All Current Changes

--- a/sample-sigconf.tex
+++ b/sample-sigconf.tex
@@ -90,7 +90,15 @@ Each vertex includes different properties such as type of node, risk of exposure
   \label{fig:ecosystem_whole}
 \end{figure}
 
- The research questions we seek to answer in this paper are that ``In a graph-based network of identity, what are the underlying characteristics? Are PII forming groups or clusters? If so, what are the isolated PII nodes and connected ones?''. We would also want to answer ``Inside the network, which PII is in the critical path of obtaining others most often and which PII can influence the acquisition of the other PII?''. We further observe questions such as: ``In the PII graph, where is the PII located? Is it connected with lots of dangerous neighboring PII? Or is it placed on the boundary of a cluster?''.
+The Identity Ecosystem takes ITAP’s output as its input. Identity Threat Assessment and Prediction (ITAP) is a risk assessment framework that characterize the of process for identity theft and patterns of vulnerabilities \cite{ITAP}. ITAP captures instances of identity crime from diverse sources, further aggregates this data to portrait the identity vulnerabilities, the value of identity attributes, and their risk of exposure.
+
+Continually collecting raw text data from various sources of news feeds stories, ITAP
+aims to determine the approaches and resources actually used to carry out identity crimes; the vulnerabilities that were exploited during the process; as well as the consequences according to these incidents for the individual victims, in terms of the organizations affected and the perpetrators involved.
+The ITAP database is a comprehensive, structured, and continually growing repository of such information, with approximately more than 5,000 incidents captured up to now. The cases span from 2000 to 2018. The version of data set we are using is 2017 version and it was extracted in May, 2018.
+
+%  The research questions we seek to answer in this paper are that ``Given a graph-based network of identity, what are the underlying characteristics? Are PII forming groups or clusters? If so, what are the isolated PII nodes and connected ones?''. We would also want to answer ``Inside the network, which PII is in the critical path of obtaining others most often and which PII can influence the acquisition of the other PII?''. We further observe questions such as: ``In the PII graph, where is the PII located? Is it connected with lots of dangerous neighboring PII? Or is it placed on the boundary of a cluster?''.
+
+The research questions we seek to answer in this paper are that ``Given a real-world network of identity, what are the underlying characteristics? Among large amount of PII, what are the ones that are most possible sources for breaches?''. Also ``If a certain PII is compromised, what is the cost for it to acquire all the other accessible PII?''. For real world analogy, if the name of a person is exposed, what is the cost for the identity theft to collect the indivial
 
 We focus on three statistical indices on the given data set: (1) Bar, pie, and distribution charts based on the node or edge value (2) Centrality measurement including node specific in and out-degree centrality, betweenness centrality, and closeness centrality and (3) Strongly connected  components of nodes for identifying clusters. Based on the results, a comprehensive discussion is presented about possible breaches with more important attributes, and flow of personal information inside the network modeling the real-world information movement. 
 
